# api-download

./: .gitignore  Dockerfile  README.md  api.py  app.py  db.py  pyproject.toml
.github/workflows/: dockerimage.yml  pythonapp.yml
app/: __init__.py
app/persistence/: db.py
app/routes/v0/: __init__.py
tests/v0/: test_cases.py
