[tool.poetry]
name = "public-api"
version = "0.1.0"
description = "Public API for fetching UUIDs of SARS-CoV-2 positive users"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.1"
psycopg2 = "^2.8.4"
Flask-SQLAlchemy = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
