[tool.poetry]
name = "public-api"
version = "0.1.0"
description = "Public API for fetching UUIDs of SARS-CoV-2 positive users"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.1"
Flask-PyMongo = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
